[package]
name = "m3u8_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
m3u8-rs = "5.0.4"
md-5 = "0.10.6"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = {version = "2.4.1", features = ["serde"]}
